Fix HTML structure and title for login form

--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Login Form</title>
 </head>
 <body>
     <h1>Login Form</h1>
@@ -15,4 +15,5 @@
 
 
 </body>
+
 </html>
